<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_backgrd"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="297dp"
        android:layout_height="118dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/logo_green_flag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.594">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="75dp"
            android:layout_marginTop="60dp"
            android:text="@string/title"
            android:textColor="#fff"
            android:textSize="20dp" />

        <View
            android:id="@+id/view1"
            android:layout_width="20dp"
            android:layout_height="21dp"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="74dp"
            android:layout_marginTop="138dp"
            android:background="@drawable/tick" />

        <TextView
            android:id="@+id/tv_one"
            android:layout_width="218dp"
            android:layout_height="25dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="135dp"
            android:layout_toEndOf="@+id/view1"
            android:text="@string/title1"
            android:textColor="#fff"
            android:textSize="15dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="19dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="76dp"
            android:layout_marginBottom="102dp"
            android:background="@drawable/tick" />

        <TextView
            android:id="@+id/tv_two"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="104dp"
            android:layout_toEndOf="@+id/view2"
            android:text="@string/title2"
            android:textColor="#fff"
            android:textSize="15dp" />

        <View
            android:id="@+id/view3"
            android:layout_width="19dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="74dp"
            android:layout_marginBottom="72dp"
            android:background="@drawable/tick" />

        <TextView
            android:id="@+id/tv_three"
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="72dp"
            android:layout_toEndOf="@+id/view3"
            android:text="@string/title3"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/bt_create"
        android:layout_width="306dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_grad"
        android:text="@string/bt_create"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>