<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".NextPage">

    <LinearLayout
        android:layout_width="247dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="113dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_emailinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
             />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/username"

            android:inputType="textPersonName"
             />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/passwrd"

            android:inputType="textPersonName"
             />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CHANGE PHOTO"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/et_user_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/age"


            android:inputType="textPersonName"
             />

        <Button
            android:id="@+id/btn_choosebrith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="CHOOSE BIRTH DATE"
            android:textColor="@color/black" />

        <Spinner
            android:id="@+id/spn_countries"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:text="Name" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"

            android:text="Gender"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"

            android:text="Female"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="Male"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/radioButton3"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="Not Specified"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/postalAddr"
            android:inputType="textPersonName"
             />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="87dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="495dp"
        android:layout_marginEnd="12dp"

        android:layout_marginBottom="17dp"
        android:text="SAVE" />
</RelativeLayout>